--- a/index.html
+++ b/index.html
@@ -34,10 +34,48 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <!-- Main content-->
 <div class="w3-main">
 
+
+  <div class="w3-row">
+    <div class="w3-twothird w3-container">
+      <h1 class="w3-text-teal">Professional Experiences</h1>
+      <h2 class="w3-text-teal">Research Assistant (08/23 – 11/23)</h2>
+      <p>I assisted an academic project at the University of New South Wales which investigated regional differences in perceptions of high school teacher effectiveness and engagement. The data included survey responses from 17,000 parents nationwide and information on 119,000 American schools.
+        In my role, I found the great-circle distance to pinpoint schools within a 10-mile radius of each respondent's location to improve data utility. Overall, this role helped to improve my skills in data interpretation, managing large datasets, and performing calculations using matrices and loops.
+      </p>
+      <h2 class="w3-text-teal">Intern at Torrens University (02/23 – 05/23)</h2>
+      <p> I reported to the Head of the IT department and explored practical components of cyber security. In this role, among other things, I 
+        created a phishing email which was designed to appear like a Windows Security Alert and had a 27% click rate and I checked the Torrens Network using a Virtual Machine.
+        </p>
+    </div>
+    <div class="w3-third w3-container">
+      <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
+      <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
+    </div>
+  </div>
+
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">What is this website about?</h1>
-      <p>This website documents the coding experiences and journey of Agastya Govind (me!).</p>
+      <h1 class="w3-text-teal">Technical Skills</h1>
+      <p>Programming Languages:</p>
+      <ul>
+        <li>Python</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>C</li>
+        <li>Java</li>
+        <li>JavaScript</li>
+        <li>SQL</li>
+      </ul>
+      <p>Frameworks/Tools:</p>
+      <ul>
+        <li>Github</li>
+        <li>Git</li>
+        <li>Numpy</li>
+        <li>Pandas</li>
+        <li>Plotly</li>
+        <li>Matlab</li>
+        <li>PyGame</li>
+      </ul>
     </div>
     <div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
@@ -47,21 +85,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Heading</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-    </div>
-  </div>
-
-  <div class="w3-row w3-padding-64">
-    <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Heading</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h1 class="w3-text-teal">Other Experiences</h1>
+      <ul>
+        <li>Developed Data Visualization project which used Pandas and Plotly libraries to illustrate correlations between different school examination grades</li>
+        <li>Created website which displayed weather in a searched area by calling APIs</li>
+        <li>Designed numerous games using the PyGame library (e.g. Wordle)</li>
+      </ul>
     </div>
     <div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
