--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 </div>
 
 <!-- Main content-->
-<div class="w3-main" style="margin-top: 50px;">
+<div class="w3-main" style="margin-top: 50px; margin-left: 20px; margin-right: 20px;">
 
     <h1 class="w3-text-teal">Professional Experiences</h1>
     <h2 class="w3-text-teal">Research Assistant (08/23 – 11/23)</h2>
