--- a/about.html
+++ b/about.html
@@ -28,7 +28,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Home Page</a>
     <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Me</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Contact</a>
   </div>
 </div>
 
@@ -84,7 +83,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
   <footer id="myFooter">
     <div class="w3-container w3-theme-l2 w3-padding-32">
-      <h4>Footer</h4>
+      <h4>agastya.govind@gmail.com | https://www.linkedin.com/in/agovind23/ | 447-902-5706</h4>
     </div>
   </footer>
 
