--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   
 
   <footer id="myFooter">
-    <div class="w3-container w3-theme-l2 w3-padding-32">
+    <div class="w3-container w3-theme-l2 w3-padding-32" style="text-align: center;">
       <h4>agastya.govind@gmail.com | https://www.linkedin.com/in/agovind23/ | 447-902-5706</h4>
     </div>
   </footer>
