Updating About Me

--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>
+    <a href="#" class="w3-bar-item w3-button w3-theme-l1"></a>
     <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Home Page</a>
     <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Me</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
+    
   </div>
 </div>
 
@@ -37,7 +37,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-teal">Educational History</h1>
-      <p>I attended Sydney Boys High School (SBHS) from 2017 to 2023.</p>
+      <p>I attended Sydney Boys High School (SBHS) from 2017 to 2023. In early 2024 I attended the University of New South Wales, studying Computer Science.
+        I am currently taking a Computer Science degree at the University of Illinois Urbana-Champaign.
+      </p>
     </div>
     <div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
@@ -47,9 +49,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
   <div class="w3-row">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Heading</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h1 class="w3-text-teal">Hobbies</h1>
+      <h2 class="w3-text-teal">Debating</h2>
+      <p>I've competed in debating throughout high school and into University. I've had experience as both a debating coach, taking a competitive high school debating team, and as an adjudicator, judging across multiple prestigious high school tournaments.
+        Furthermore, I've competed at several University competitions as both a debater and an adjudicator. As a debater I've won the novice finals of UPenn Pre-WUDC, been the 4th best novice speaker and competed in a semi-final at Western IV and been the best novice speaker, 6th best overall speaker and competed in the final at East Malaya Open.
+        I've broken as an adjudicator at several competitions including UCLA IV, Indo Pro-Am, UNSW Pre-Australs, Mac Pre-Australs, USU Open and UNSW Pre-Easters.  
+      </p>
+      <h2 class="w3-text-teal">Chess</h2>
+      <p>I've competed in chess for several years. Online, I've achieved a rating in the 99.7 - 99.9th percentile. Over the board, I've achieved an	Australian Chess Federation peak rating of 1825 which is T400 nationally.
+        I've also achieved a FIDE Blitz peak rating of 1827 and a USCF rating of 1635. I was 1st in the U1500 section of the Champaign Chess Championship #6, 1st at Inner West ACF Quick Tournament April 2023,
+        2nd at Inner West Open Blitz Tournament July 2022 and at the 2023 City of Sydney Blitz Tournament I was awarded 'Best under 1800'.
+      </p>
     </div>
     <div class="w3-third w3-container">
       <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
@@ -57,17 +67,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     </div>
   </div>
 
-  <div class="w3-row w3-padding-64">
-    <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Heading</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-    </div>
-  </div>
 
   <!-- Pagination -->
   <div class="w3-center w3-padding-32">
