--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-theme-l1">Logo</a>
+    <a href="#" class="w3-bar-item w3-button w3-theme-l1"></a>
     <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Home Page</a>
     <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Me</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
+    
   </div>
 </div>
 
