--- a/index.html
+++ b/index.html
@@ -1,95 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home Page</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
-.w3-sidebar {
-  z-index: 3;
-  top: 43px;
-  bottom: 0;
-  height: inherit;
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: #333;
+      color: #fff;
+      padding: 1rem 0;
+      text-align: center;
+    }
+    nav {
+      background: #444;
+      display: flex;
+      justify-content: center;
+      padding: 0.5rem 0;
+    }
+    nav a {
+      color: #fff;
+      margin: 0 1rem;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      padding: 2rem;
+    }
+    section {
+      margin-bottom: 2rem;
+    }
+    h2 {
+      color: #444;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.5rem;
+    }
+    ul {
+      list-style-type: square;
+      padding-left: 1.5rem;
+    }
+    footer {
+      background: #333;
+      color: #fff;
+      text-align: center;
+      padding: 1rem 0;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>Agastya Govind</h1>
+    <p>Web Developer | Programmer | Tech Enthusiast</p>
+  </header>
 
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-theme w3-top w3-left-align w3-large">
-    <a href="#" class="w3-bar-item w3-button w3-theme-l1"></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Home Page</a>
-    <a href="about.html" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About Me</a>
-    
-  </div>
-</div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#experience">Experience</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-<!-- Main content-->
-<div class="w3-main" style="margin-top: 50px; margin-left: 20px; margin-right: 20px;">
+  <div class="container">
 
-    <h1 class="w3-text-teal">Professional Experiences</h1>
-    <h2 class="w3-text-teal">Research Assistant (08/23 – 11/23)</h2>
-    <p>I assisted an academic project at the University of New South Wales which investigated regional differences in perceptions of high school teacher effectiveness and engagement. The data included survey responses from 17,000 parents nationwide and information on 119,000 American schools.
-      In my role, I found the great-circle distance to pinpoint schools within a 10-mile radius of each respondent's location to improve data utility. Overall, this role helped to improve my skills in data interpretation, managing large datasets, and performing calculations using matrices and loops.
-    </p>
-    <h2 class="w3-text-teal">Intern at Torrens University (02/23 – 05/23)</h2>
-    <p> I reported to the Head of the IT department and explored practical components of cyber security. In this role, among other things, I 
-      created a phishing email which was designed to appear like a Windows Security Alert and had a 27% click rate and I checked the Torrens Network using a Virtual Machine.
-    </p>
+    <section id="experience">
+      <h2>Work Experience</h2>
+      <h3>Research Assistant @ UNSW</h3>
+      <p><em>Aug 2023 – Nov 2023</em></p>
+      <ul>
+        <li>Assisted an academic project which investigated regional differences in perceptions of high school teacher effectiveness and engagement</li>
+        <li>Data included survey responses from 17,000 parents nationwide and information on 119,000 American schools</li>
+        <li>My role focused on finding the great-circle distance to pinpoint schools within a 10-mile radius of each respondent's location to improve data utility </li>
+      </ul>
 
+      <h3>Cyber Security Intern @ Torrens University</h3>
+      <p><em>Feb 2023 – May 2023</em></p>
+      <ul>
+        <li>Worked with the Head of the IT department and explored practical components of cyber security</li>
+        <li>My role included making phishing emails and checking the Torrens network using a Virtual Machine</li>
+      </ul>
+    </section>
 
-    <h1 class="w3-text-teal">Technical Skills</h1>
-    <p>Programming Languages:</p>
-    <ul>
-      <li>Python</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>C</li>
-      <li>Java</li>
-      <li>JavaScript</li>
-      <li>SQL</li>
-    </ul>
-    <p>Frameworks/Tools:</p>
-    <ul>
-      <li>Github</li>
-      <li>Git</li>
-      <li>Numpy</li>
-      <li>Pandas</li>
-      <li>Plotly</li>
-      <li>Matlab</li>
-      <li>PyGame</li>
-    </ul>
-
-
-
-    <h1 class="w3-text-teal">Other Experiences</h1>
-    <ul>
-      <li>Developed Data Visualization project which used Pandas and Plotly libraries to illustrate correlations between different school examination grades</li>
-      <li>Created website which displayed weather in a searched area by calling APIs</li>
-      <li>Designed numerous games using the PyGame library (e.g. Wordle)</li>
-    </ul>
-
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Python, Flask</li>
+        <li>Numpy, Pandas, Plotly, Matlab</li>
+        <li>HTML, CSS, JavaScript</li>
+        <li>C, C++</li>
+        <li>Git & GitHub</li>
+        <li>SQL & NoSQL Databases</li>
+        <li>Pygame, GameMaker</li>
+      </ul>
+    </section>
   </div>
 
-  
-
-  <footer id="myFooter">
-    <div class="w3-container w3-theme-l2 w3-padding-32" style="text-align: center;">
-      <h4>agastya.govind@gmail.com | https://www.linkedin.com/in/agovind23/ | 447-902-5706</h4>
-    </div>
+  <footer>
+    <p>&copy; agastya.govind@gmail.com | https://www.linkedin.com/in/agovind23/ | 447-902-5706</p>
   </footer>
-
-<!-- END MAIN -->
-</div>
-
-<script>
-</script>
-
 </body>
 </html>
