--- a/projects.html
+++ b/projects.html
@@ -76,34 +76,22 @@
 
   <div class="container">
 
-    <section id="experience">
-      <h2>Work Experience</h2>
-      <h3>Research Assistant @ UNSW</h3>
-      <p><em>Aug 2023 – Nov 2023</em></p>
+    <section id="projects">
+      <h2>Projects</h2>
+      <h3>Data Visualization Project | Python, Pandas, Plotly</h3>
       <ul>
-        <li>Assisted an academic project which investigated regional differences in perceptions of high school teacher effectiveness and engagement</li>
-        <li>Data included survey responses from 17,000 parents nationwide and information on 119,000 American schools</li>
-        <li>My role focused on finding the great-circle distance to pinpoint schools within a 10-mile radius of each respondent's location to improve data utility </li>
+        <li>Used Pandas and Plotly libraries to illustrate correlations between different school examination grades</li>
       </ul>
 
-      <h3>Cyber Security Intern @ Torrens University</h3>
-      <p><em>Feb 2023 – May 2023</em></p>
+      <h3>Weather Website with API Integration | HTML, CSS, JavaScript</h3>
       <ul>
-        <li>Worked with the Head of the IT department and explored practical components of cyber security</li>
-        <li>My role included making phishing emails and checking the Torrens network using a Virtual Machine</li>
+        <li>Developed a website that displayed weather conditions for any searched location by calling external APIs</li>
       </ul>
-    </section>
 
-    <section id="skills">
-      <h2>Skills</h2>
+      <h3>Game Development in PyGame, GameMaker | Python, PyGame</h3>
       <ul>
-        <li>Python, Flask</li>
-        <li>Numpy, Pandas, Plotly, Matlab</li>
-        <li>HTML, CSS, JavaScript</li>
-        <li>C, C++</li>
-        <li>Git & GitHub</li>
-        <li>SQL & NoSQL Databases</li>
-        <li>Pygame, GameMaker</li>
+        <li>Designed multiple games using the PyGame library, including a Wordle game</li>
+        <li>Recently, I've also been developing games in GameMaker</li>
       </ul>
     </section>
   </div>
