--- a/projects.html
+++ b/projects.html
@@ -74,6 +74,13 @@
     <a href="#contact">Contact</a>
   </nav>
 
+  <iframe 
+    src="/game/index.html" 
+    width="800" 
+    height="600" 
+    style="border:none;">
+  </iframe>
+
   <div class="container">
 
     <section id="projects">
