--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <a href="/index.html">Home</a>
     <a href="#about">About</a>
     <a href="/projects.html">Projects</a>
+    <a href="/game.html">Platformer Game</a>
     <a href="#contact">Contact</a>
   </nav>
 
