--- a/game.html
+++ b/game.html
@@ -74,28 +74,16 @@
     <a href="/game.html">Platformer Game</a>
     <a href="#contact">Contact</a>
   </nav>
+  
+
 
   <div class="container">
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <h3>Data Visualization Project | Python, Pandas, Plotly</h3>
-      <ul>
-        <li>Used Pandas and Plotly libraries to illustrate correlations between different school examination grades</li>
-      </ul>
-
-      <h3>Weather Website with API Integration | HTML, CSS, JavaScript</h3>
-      <ul>
-        <li>Developed a website that displayed weather conditions for any searched location by calling external APIs</li>
-      </ul>
-
-      <h3>Game Development in PyGame, GameMaker | Python, PyGame</h3>
-      <ul>
-        <li>Designed multiple games using the PyGame library, including a Wordle game</li>
-        <li>Recently, I've also been developing games in GameMaker</li>
-        <li>One of these, made for a game jam, is <a href="/game.html">playable here</a></li>
-      </ul>
-    </section>
+    <iframe 
+        src="/game/index.html" 
+        width="1366" 
+        height="768" 
+        style="border:none;">
+    </iframe>
   </div>
 
   <footer>
