--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
   <header>
     <h1>Agastya Govind</h1>
-    <p>Web Developer | Programmer | Tech Enthusiast</p>
+    <p>Web Developer | Programmer | Game Designer</p>
   </header>
 
   <nav>
