--- a/game.html
+++ b/game.html
@@ -38,6 +38,10 @@
       margin: auto;
       padding: 2rem;
     }
+    .gamecont {
+      margin-left: -20px;
+      padding: 2rem;
+    }
     section {
       margin-bottom: 2rem;
     }
@@ -77,7 +81,7 @@
   
 
 
-  <div class="container">
+  <div class="gamecont">
     <iframe 
         src="/game/index.html" 
         width="1366" 
