Reformat of playable games
added extra game

--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
     <a href="/index.html">Home</a>
     <a href="#about">About</a>
     <a href="/projects.html">Projects</a>
-    <a href="/game.html">Platformer Game</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <div class="container">
+
+    <section id="projects">
+      <h3>A list of some of my projects can be found <a href="/projects.html"> here</a></h3>
+    </section>
 
     <section id="experience">
       <h2>Work Experience</h2>
