--- a/projects.html
+++ b/projects.html
@@ -71,13 +71,20 @@
     <a href="/index.html">Home</a>
     <a href="#about">About</a>
     <a href="/projects.html">Projects</a>
-    <a href="/game.html">Platformer Game</a>
     <a href="#contact">Contact</a>
   </nav>
 
   <div class="container">
 
     <section id="projects">
+      <h3>Game Development in PyGame, GameMaker | Python, PyGame</h3>
+      <ul>
+        <li>Recently, I've also been developing games in GameMaker</li>
+        <li>A couple of these, made for game jams, are <a href="/ogame.html"> playable here</a> and <a href="/game.html"> here</a></li>
+
+        <li>I've also designed multiple games using the PyGame library, including a Wordle clone</li>
+      </ul>
+
       <h2>Projects</h2>
       <h3>Data Visualization Project | Python, Pandas, Plotly</h3>
       <ul>
@@ -89,12 +96,7 @@
         <li>Developed a website that displayed weather conditions for any searched location by calling external APIs</li>
       </ul>
 
-      <h3>Game Development in PyGame, GameMaker | Python, PyGame</h3>
-      <ul>
-        <li>Designed multiple games using the PyGame library, including a Wordle game</li>
-        <li>Recently, I've also been developing games in GameMaker</li>
-        <li>One of these, made for a game jam, is <a href="/game.html">playable here</a></li>
-      </ul>
+      
     </section>
   </div>
 
