--- a/ogame.html
+++ b/ogame.html
@@ -82,7 +82,7 @@
 
   <div class="gamecont">
     <iframe 
-        src="/game/index.html" 
+        src="/JamBuilders25/index.html" 
         width="1366" 
         height="768" 
         style="border:none;">
