--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,7 @@
   <div class="container">
 
     <section id="projects">
+      <h2>Projects</h2>
       <h3>Game Development in PyGame, GameMaker | Python, PyGame</h3>
       <ul>
         <li>Recently, I've also been developing games in GameMaker</li>
@@ -85,7 +86,13 @@
         <li>I've also designed multiple games using the PyGame library, including a Wordle clone</li>
       </ul>
 
-      <h2>Projects</h2>
+      <h3>Hack Illinois Capital One Submission | Javascript, HTML, Capital One API, OpenAI</h3>
+      <ul>
+        <li>Worked on a website that helps you manage and monitor your healthcare expenses. The application includes a
+receipt scanning feature that uses OpenAI’s GPT-4o-mini model to automatically extract expense details from
+medical receipts.</li>
+      </ul>
+
       <h3>Data Visualization Project | Python, Pandas, Plotly</h3>
       <ul>
         <li>Used Pandas and Plotly libraries to illustrate correlations between different school examination grades</li>
