Added new projects

--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,18 @@
   <div class="container">
 
     <section id="projects">
+      <h3>Option Pricer Website | HTML, CSS, Python, Flask</h3>
+      <ul>
+        <li>Created a website that calculates an option's price using the Black Scholes method</li>
+        <li>Calculated risk-free rate using stock's localized bonds and linear interpolation/least square solutions</li>
+      </ul>
+
+      <h3>Student Response Score Prediction Website | HTML, CSS, Python, Pytorch, Flask</h3>
+      <ul>
+        <li>Developed a website that predicted a student's mark to a  question given their short answer response</li>
+        <li>Used real-world data for accurate and sophisticated model training using the PyTorch library</li>
+      </ul>
+
       <h2>Projects</h2>
       <h3>Game Development in PyGame, GameMaker | Python, PyGame</h3>
       <ul>
